--- a/07_Softwares.Rmd
+++ b/07_Softwares.Rmd
@@ -174,6 +174,124 @@ Além disso, o R permite a manipulação de *strings*. Por exemplo, você pode c
 
 Esses são apenas alguns exemplos da sintaxe básica e operações no R. A linguagem R é extremamente poderosa e flexível, permitindo uma ampla gama de manipulações de dados e análises estatísticas. Não se preocupe se encontrou erros ou se ainda não conseguiu utilizar todos os códigos de exemplo. Continue lendo o material do curso e praticando, é o melhor caminho para o aprendizado eficaz da linguagem R.
 
+### Introdução à análise estatística com R
+
+A análise estatística é uma parte fundamental da linguagem de programação R, que foi originalmente desenvolvida com um forte foco em estatística e análise de dados. Aqui está uma introdução detalhada à análise estatística com R.
+
+R é uma linguagem de programação e um ambiente de software para análise estatística e gráficos. Ele fornece uma ampla variedade de técnicas estatísticas, incluindo regressão linear e não linear, análise de séries temporais, classificação, agrupamento e muito mais. Além disso, R é altamente extensível através de pacotes, que são bibliotecas de funções desenvolvidas pela comunidade para estender a funcionalidade do R.
+
+#### Estatística Descritiva
+
+A estatística descritiva é a primeira etapa na análise de dados. Ela envolve resumir e organizar os dados de maneira que possam ser facilmente compreendidos. As funções básicas do R para estatística descritiva incluem \`mean()\` para calcular a média, \`median()\` para a mediana, \`sd()\` para o desvio padrão, \`var()\` para a variância, \`min()\` e \`max()\` para os valores mínimo e máximo, respectivamente, e \`summary()\` para obter um resumo estatístico dos dados. As funções mencionadas acima já foram exemplificadas no módulo 2. Tente aplicar essas funções em um novo exemplo (ex.: vet1 \<- c(1,4,8,3,4,6,7,8,2,6,8,9,2,1,)).
+
+#### Visualização de dados
+
+A visualização de dados é uma parte importante da análise estatística. R fornece várias ferramentas para criar gráficos e visualizações de dados. As funções básicas incluem \`plot()\` para criar gráficos de dispersão, \`hist()\` para histogramas, \`boxplot()\` para boxplots e \`barplot()\` para gráficos de barras. Além disso, o pacote \`ggplot2\` oferece uma poderosa e flexível estrutura para criar gráficos complexos. O pacote \`ggplot2\` será explorado em mais detalhes no próximo módulo.
+
+**Exemplo**: usando a função “plot( )”
+
+![](images/clipboard-3607661657.png)
+
+\*Dois vetores, “Hora” e “Temperatura”, foram criados e depois inseridos na função “plot( )”. Note que a sintaxe da função foi “plot(Temperatura \~ Hora)”, que é o equivalente de dizer “Temperatura em função da Hora” em linguagem R. O mesmo resultado pode ser obtido informando qual vetor ocupa qual eixo: “plot(x = Hora, y = Temperatura)”.
+
+**Exemplo**: criando um histograma com a função “hist( )”
+
+![](images/clipboard-680965483.png)
+
+\*Utilizando o vetor “Temperatura” do exemplo anterior, criou-se um histograma com a função “hist( )”. Note como temperaturas entre 23,0 e 23,5 ºC são mais comuns do que as outras medidas ao longo do intervalo de tempo avaliado.
+
+**Exemplo**: criando um boxplot com a função “boxplot( )”
+
+![](images/clipboard-1951655399.png)
+
+\*Utilizando a mesma estratégia do exemplo anterior, um diagrama de caixa (*boxplot*) foi criado através da função “boxplot( )”. Se desejar, leia mais sobre [como interpretar um *boxplot*](https://statplace.com.br/blog/como-interpretar-um-boxplot/), e pratique com novos exercícios.
+
+#### Estatística inferencial
+
+A estatística inferencial é o processo de usar os dados de uma amostra para inferir propriedades da população. Isso envolve a realização de testes de hipóteses para determinar se um resultado observado é devido ao acaso ou a algum fator subjacente. As funções básicas do R para estatística inferencial incluem \`t.test()\` para o teste t, \`chisq.test()\` para o teste do qui-quadrado, \`cor.test()\` para o teste de correlação, e \`lm()\` para a regressão linear.
+
+**Exemplo**: realizando um teste de hipóteses com dois vetores numéricos
+
+![](images/clipboard-2899251105.png)
+
+\*Suponhamos que as temperaturas superficiais de duas lâmpadas tenham sido medidas repetidas vezes. Agora, podemos comparar esses vetores numéricos (“T_lampada1” e “T_lampada2”) considerando a hipótese de que a diferença verdadeira entre as médias de ambos os vetores é igual a 0. Como se observa, a função “t.test( )” retorna uma probabilidade muito baixa (*p* = 0.00001152) de que os dois vetores tenham surgido de uma mesma distribuição. Em outras palavras, podemos atribuir confiança razoável de que ambas as lâmpadas possuam temperaturas médias distintas.
+
+#### Modelagem estatística
+
+A modelagem estatística é o processo de desenvolver um modelo matemático que descreve uma relação entre variáveis. R fornece várias funções para modelagem estatística, incluindo \`lm()\` para regressão linear, \`glm()\` para regressão linear generalizada, \`anova()\` para análise de variância, e \`arima()\` para modelagem de séries temporais.
+
+**Exemplo**: avaliando a correlação entre dois vetores numéricos com a função “lm( )”
+
+![](images/clipboard-870011745.png)
+
+\*Dados de estatura e massa corporal de diversas pessoas foram armazenados em vetores numéricos. Um gráfico da relação entre as duas variáveis foi gerado com o código “plot(Massa_corporal \~ Estatura)”, seguido da linha vermelha “abline(line(Massa_corporal \~ Estatura), col="red")”. Como a relação entre estatura e massa corporal parecem proporcionais, a função “lm( )” foi utilizada para medir a associação entre os dois vetores. De acordo com o valor de R-quadrado (“*R-squared*”) da função “summary(lm(Massa_corporal \~ Estatura))”, 97 % da variação na massa corporal pode ser explicada pela variação observada na estatura. No exemplo, a função “summary( )” é usada para detalhar os resultados do modelo de regressão linear calculado pela função “lm( )”.
+
+R é uma ferramenta poderosa para análise estatística, oferecendo uma ampla gama de funções para estatística descritiva, visualização de dados, estatística inferencial e modelagem estatística. Aprender a usar R para análise estatística pode abrir novas oportunidades para a exploração e compreensão de dados.
+
+### Usando R para estatísticas descritivas
+
+A linguagem de programação R é uma ferramenta poderosa para a realização de estatísticas descritivas, que são métodos utilizados para resumir e organizar um conjunto de dados de maneira que possam ser facilmente compreendidos. Abaixo, você encontrará uma explanação detalhada de como usar R para estatísticas descritivas. Exemplos dessas funções podem ser encontradas no módulo 2, mas é recomendado que você pratique os códigos deste módulo em seu ambiente RStudio.
+
+#### Medidas de tendência central
+
+As medidas de tendência central são estatísticas que indicam onde os dados estão centrados. As principais medidas de tendência central são a média, a mediana e a moda.
+
+1.  **Média**: a média de um conjunto de dados é calculada somando todos os valores e dividindo pelo número de valores. No R, a média é calculada usando a função \`mean()\`. Por exemplo, \`mean(c(1, 2, 3, 4, 5))\` calcula a média do vetor de números de 1 a 5.
+
+2.  **Mediana**: a mediana é o valor que divide os dados ao meio quando estão ordenados. No R, a mediana é calculada usando a função \`median()\`. Por exemplo, \`median(c(1, 2, 3, 4, 5))\` calcula a mediana do vetor de números de 1 a 5.
+
+3.  **Moda**: a moda é o valor mais frequente em um conjunto de dados. R não tem uma função embutida para calcular a moda, mas pode ser calculada usando funções de outros pacotes ou escrevendo sua própria função.
+
+#### Medidas de dispersão
+
+As medidas de dispersão são estatísticas que indicam o quanto os dados estão espalhados. As principais medidas de dispersão são a variância, o desvio padrão e a amplitude.
+
+1.  **Variância**: a variância é uma medida da dispersão que indica o quanto os valores se desviam da média. No R, a variância é calculada usando a função \`var()\`. Por exemplo, \`var(c(1, 2, 3, 4, 5))\` calcula a variância do vetor de números de 1 a 5.
+
+2.  **Desvio padrão**: o desvio padrão é a raiz quadrada da variância e fornece uma medida de dispersão que está na mesma unidade que os dados. No R, o desvio padrão é calculado usando a função \`sd()\`. Por exemplo, \`sd(c(1, 2, 3, 4, 5))\` calcula o desvio padrão do vetor de números de 1 a 5.
+
+3.  **Amplitude**: a amplitude é a diferença entre o maior e o menor valor em um conjunto de dados. No R, a amplitude pode ser calculada subtraindo o resultado da função \`min()\` do resultado da função \`max()\`. Por exemplo, \`max(c(1, 2, 3, 4, 5)) - min(c(1, 2, 3, 4, 5))\` calcula a amplitude do vetor de números de 1 a 5.
+
+#### Resumo dos dados
+
+A função \`summary()\` no R fornece um resumo estatístico dos dados, incluindo a média, a mediana, o mínimo, o máximo, o primeiro quartil e o terceiro quartil. Por exemplo, \`summary(c(1, 2, 3, 4, 5))\` fornece um resumo do vetor de números de 1 a 5.
+
+R é uma ferramenta poderosa para estatísticas descritivas, oferecendo uma ampla gama de funções para calcular medidas de tendência central, medidas de dispersão e resumos de dados. Aprender a usar R para estatísticas descritivas pode abrir novas oportunidades para a exploração e compreensão de dados.
+
+### Estatísticas inferenciais com R
+
+As estatísticas inferenciais com R envolvem o uso de técnicas estatísticas para fazer generalizações sobre uma população com base em uma amostra de dados. Essas técnicas são fundamentais para a tomada de decisões baseada em dados e para a pesquisa científica.
+
+#### Conceitos básicos
+
+Antes de realizar a inferência estatística, é importante entender alguns conceitos básicos, como população, amostra, parâmetro e estimativa. A população é o conjunto completo de observações que estão sendo estudadas, enquanto uma amostra é um subconjunto dessa população. Um parâmetro é uma medida resumida da população, como a média populacional, e uma estimativa é o correspondente calculado a partir da amostra.
+
+#### Testes de hipóteses
+
+Um dos pilares da inferência estatística é o teste de hipóteses. O objetivo é testar uma afirmação (hipótese) sobre um parâmetro populacional. No R, funções como \`t.test()\`, \`chisq.test()\` e \`anova()\` são usadas para realizar diferentes tipos de testes de hipóteses.
+
+Por exemplo, o \`t.test()\` é usado para comparar as médias de duas amostras e determinar se elas são significativamente diferentes. O teste do qui-quadrado (\`chisq.test()\`) é frequentemente usado para testar a independência entre duas variáveis categóricas. A análise de variância (ANOVA), realizada através da função \`anova()\`, é usada para comparar as médias de três ou mais grupos.
+
+#### Intervalos de confiança
+
+Outra ferramenta importante na inferência estatística é o intervalo de confiança, que fornece um intervalo estimado dentro do qual é provável que o parâmetro populacional esteja. No R, o \`t.test()\` e outras funções de teste fornecem intervalos de confiança como parte de seus resultados.
+
+#### Regressão e correlação
+
+A análise de regressão é usada para entender a relação entre variáveis. No R, a função \`lm()\` é usada para realizar regressão linear, que modela a relação entre uma variável dependente e uma ou mais variáveis independentes. A correlação, que mede a força e a direção da relação linear entre duas variáveis, pode ser calculada com a função \`cor()\`.
+
+#### Análise de séries temporais
+
+A análise de séries temporais é um tipo de inferência estatística que lida com dados coletados ao longo do tempo. No R, funções como \`ts()\` para criar objetos de séries temporais e \`arima()\` para modelagem de séries temporais são usadas para analisar como os dados mudam ao longo do tempo.
+
+**Exemplo**: utilizando a função “arima( )” para prever uma série temporal
+
+![](images/clipboard-3461101962.png)
+
+\*Utilizando os dados de tempo e variação do preço de uma determinada ação, podemos aplicar a função “arima( )” para criar um modelo e prever a variação de preço para as próximas 3 horas. Veja como o gráfico representa a série temporal original seguida de três pontos (azuis) informando a variação futura prevista.
+
+A inferência estatística no R é uma área vasta e complexa, que requer um entendimento sólido de teoria estatística e a habilidade de aplicar essa teoria usando o R. As funções e pacotes disponíveis no R tornam a linguagem uma ferramenta poderosa para realizar análises inferenciais e extrair insights significativos de dados amostrais.
+
 ## Python para análise estatística
 
 ## Visualização de dados e figuras científicas
