New text in chapter 8 (about errors).

--- a/07_Softwares.Rmd
+++ b/07_Softwares.Rmd
@@ -174,6 +174,104 @@ Além disso, o R permite a manipulação de *strings*. Por exemplo, você pode c
 
 Esses são apenas alguns exemplos da sintaxe básica e operações no R. A linguagem R é extremamente poderosa e flexível, permitindo uma ampla gama de manipulações de dados e análises estatísticas. Não se preocupe se encontrou erros ou se ainda não conseguiu utilizar todos os códigos de exemplo. Continue lendo o material do curso e praticando, é o melhor caminho para o aprendizado eficaz da linguagem R.
 
+### Escrevendo código eficiente e legível
+
+Escrever código eficiente e legível em R é fundamental para garantir a manutenção, compreensão e colaboração em projetos de programação. A linguagem R, amplamente utilizada em estatística e análise de dados, oferece diversas funcionalidades que, quando bem aproveitadas, podem melhorar significativamente a qualidade do código. Abaixo, apresentamos algumas recomendações práticas acompanhadas de exemplos para escrever um código mais limpo, eficiente e legível em R.
+
+#### Convenções de nomenclatura
+
+Utilize nomes significativos e autoexplicativos para variáveis e funções. Isso facilita a compreensão do propósito de cada componente do código:
+
+![](images/clipboard-2315088477.png)
+
+#### Formatação consistente
+
+Mantenha um padrão de recuo, espaçamento e formatação. Isso torna o código mais organizado e fácil de ler:
+
+![](images/clipboard-2461203963.png)
+
+#### Comentários e documentação
+
+Inclua comentários relevantes que expliquem o propósito e a funcionalidade do código. Evite comentários óbvios e mantenha-os atualizados:
+
+![](images/clipboard-978422987.png)
+
+#### Simplicidade e modularidade
+
+Evite complexidade desnecessária. Divida o código em funções e módulos pequenos e reutilizáveis:
+
+![](images/clipboard-1708113605.png)
+
+#### Tratamento de erros
+
+Manipule e documente adequadamente quaisquer condições de erro para evitar falhas inesperadas:
+
+![](images/clipboard-2761045831.png)
+
+#### Evitar duplicações de código
+
+Reutilize trechos de código e crie funções ou classes para evitar repetições desnecessárias:
+
+![](images/clipboard-491234479.png)
+
+#### Vetorização
+
+R é uma linguagem vetorizada, o que significa que muitas operações podem ser realizadas sem o uso explícito de *loops*, tornando o código mais eficiente:
+
+![](images/clipboard-2187533748.png)
+
+Seguindo essas práticas, é possível escrever código em R que não apenas atenda aos requisitos funcionais, mas também seja fácil de ler, entender e manter. A chave é sempre buscar a clareza, a simplicidade e a eficiência, facilitando assim o trabalho tanto do autor do código quanto de outros desenvolvedores que possam trabalhar com ele no futuro.
+
+### Depuração e tratamento de erros em R
+
+Escrever código que funcione corretamente é apenas uma parte do desenvolvimento de software; a outra parte é garantir que o código continue funcionando e que possa ser corrigido quando surgirem problemas. A depuração e o tratamento de erros são habilidades essenciais para qualquer programador, e na linguagem R não é diferente. Abaixo estão algumas estratégias e ferramentas para depuração e tratamento de erros em R, acompanhadas de exemplos práticos.
+
+#### Depuração interativa
+
+A depuração interativa permite que você inspecione o estado do seu programa R enquanto ele está sendo executado. O RStudio oferece ferramentas integradas para isso, como o inspetor de erros e a função \`traceback( ) \`, que lista a sequência de chamadas que levaram ao erro. Além disso, o RStudio possui ferramentas como "Rerun with Debug" e \`options(error = browser())\`, que abrem uma sessão interativa onde o erro ocorreu.
+
+![](images/clipboard-3416304030.png)
+
+#### Tratamento de erros com tryCatch
+
+A função \`tryCatch()\` é a principal ferramenta para lidar com erros e avisos em R. Ela permite que você especifique funções manipuladoras que controlam o que acontece quando uma condição é sinalizada.
+
+![](images/clipboard-3819030973.png)
+
+#### Logging de erros
+
+Registrar erros é uma prática padrão no desenvolvimento de software. Em R, você pode usar pacotes de *logging* ou simplesmente registrar erros em um arquivo JSON ou em um banco de dados. Isso é especialmente útil em aplicativos de produção, como aplicativos shiny ou APIs REST.
+
+![](images/clipboard-2118828263.png)
+
+#### Debugging com print
+
+Se as ferramentas de depuração não ajudarem, uma boa alternativa é o "print debugging", onde você insere vários comandos \`print()\` para localizar precisamente o problema e ver os valores das variáveis importantes. É um método lento e primitivo, mas sempre funciona.
+
+![](images/clipboard-2905347804.png)
+
+A depuração e o tratamento de erros são partes cruciais do desenvolvimento em R. Utilizar as ferramentas e estratégias corretas pode economizar tempo e evitar a perda de dados ou resultados importantes. É essencial criar mensagens de erro claras e informativas e documentar o significado dos erros que seu software pode gerar. A experiência e a prática levarão a uma maior maestria na depuração e no tratamento de erros em R.
+
+### Documentando e compartilhando seu código
+
+Documentar e compartilhar seu código são práticas essenciais para qualquer programador, especialmente para iniciantes em programação que estão aprendendo a linguagem R. Essas práticas não apenas facilitam a colaboração e a revisão por outros, mas também ajudam o próprio autor a entender e manter seu código ao longo do tempo.
+
+#### Documentação de código
+
+A documentação é a primeira linha de comunicação entre o programador e quem vai ler o código depois, seja o próprio autor em um momento futuro ou outros programadores. Em R, a documentação pode ser feita diretamente no código, usando comentários, e de forma mais estruturada, usando pacotes como o \`roxygen2\`, que permite criar uma documentação que pode ser convertida em um manual de ajuda para o pacote.
+
+![](images/clipboard-3987177554.png)
+
+#### Compartilhamento de código
+
+O compartilhamento de código em R pode ser feito de várias maneiras. Uma das mais comuns é através de scripts, que são arquivos de texto com extensão \`.R\`. Esses scripts podem ser compartilhados por e-mail, repositórios de código como GitHub ou plataformas como [RPubs](https://rpubs.com), onde é possível publicar análises e códigos para que outros possam ver e usar.
+
+#### R Markdown
+
+Uma ferramenta poderosa para documentar e compartilhar análises em R é o R Markdown. Com ele, é possível combinar texto narrativo com código R que pode ser executado para gerar resultados, que são automaticamente incluídos no documento. Isso é particularmente útil para relatórios, onde a análise e os resultados precisam ser apresentados de forma clara e reproduzível.
+
+![](images/clipboard-1117062658.png)
+
 ### Introdução à análise estatística com R
 
 A análise estatística é uma parte fundamental da linguagem de programação R, que foi originalmente desenvolvida com um forte foco em estatística e análise de dados. Aqui está uma introdução detalhada à análise estatística com R.
