--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,134 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+
+@article{chambers1980,
+	title = {Statistical Computing: History and Trends},
+	author = {Chambers, John M.},
+	year = {1980},
+	month = {11},
+	date = {1980-11-01},
+	journal = {The American Statistician},
+	pages = {238--243},
+	volume = {34},
+	number = {4},
+	doi = {10.1080/00031305.1980.10483038},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/00031305.1980.10483038},
+	note = {Publisher: ASA Website
+{\_}eprint: https://www.tandfonline.com/doi/pdf/10.1080/00031305.1980.10483038}
+}
+
+@article{ihaka1996,
+	title = {R: A Language for Data Analysis and Graphics},
+	author = {Ihaka, Ross and Gentleman, Robert},
+	year = {1996},
+	month = {09},
+	date = {1996-09-01},
+	journal = {Journal of Computational and Graphical Statistics},
+	pages = {299--314},
+	volume = {5},
+	number = {3},
+	doi = {10.1080/10618600.1996.10474713},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/10618600.1996.10474713},
+	note = {Publisher: ASA Website
+{\_}eprint: https://www.tandfonline.com/doi/pdf/10.1080/10618600.1996.10474713}
+}
+
+@article{wickham2011,
+	title = {ggplot2},
+	author = {Wickham, Hadley},
+	year = {2011},
+	date = {2011},
+	journal = {WIREs Computational Statistics},
+	pages = {180--185},
+	volume = {3},
+	number = {2},
+	doi = {10.1002/wics.147},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/wics.147},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/wics.147},
+	langid = {en}
+}
+
+@article{hornik2012,
+	title = {The Comprehensive R Archive Network},
+	author = {Hornik, Kurt},
+	year = {2012},
+	date = {2012},
+	journal = {WIREs Computational Statistics},
+	pages = {394--398},
+	volume = {4},
+	number = {4},
+	doi = {10.1002/wics.1212},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/wics.1212},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/wics.1212},
+	langid = {en}
+}
+
+@book{wickham2024,
+	title = {roxygen2: In-Line Documentation for R},
+	author = {Wickham, Hadley and Danenberg, Peter and {Csárdi}, {Gábor} and Eugster, Manuel and Software, Posit and PBC, },
+	year = {2024},
+	month = {06},
+	date = {2024-06-28},
+	url = {https://cran.r-project.org/web/packages/roxygen2/index.html}
+}
+
+@article{baumer2015,
+	title = {R Markdown},
+	author = {Baumer, Benjamin and Udwin, Dana},
+	year = {2015},
+	date = {2015},
+	journal = {WIREs Computational Statistics},
+	pages = {167--177},
+	volume = {7},
+	number = {3},
+	doi = {10.1002/wics.1348},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/wics.1348},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/wics.1348},
+	langid = {en}
+}
+
+@book{pebesma2024,
+	title = {sf: Simple Features for R},
+	author = {Pebesma, Edzer and Bivand, Roger and Racine, Etienne and Sumner, Michael and Cook, Ian and Keitt, Tim and Lovelace, Robin and Wickham, Hadley and Ooms, Jeroen and {Müller}, Kirill and Pedersen, Thomas Lin and Baston, Dan and Dunnington, Dewey},
+	year = {2024},
+	month = {11},
+	date = {2024-11-05},
+	url = {https://cran.r-project.org/web/packages/sf/index.html}
+}
+
+@book{pedersen2024,
+	title = {gganimate: A Grammar of Animated Graphics},
+	author = {Pedersen, Thomas Lin and Robinson, David and Posit,  and PBC, },
+	year = {2024},
+	month = {02},
+	date = {2024-02-27},
+	url = {https://cran.r-project.org/web/packages/gganimate/index.html}
+}
+
+@book{bryan2023,
+	title = {gapminder: Data from Gapminder},
+	author = {Bryan, Jennifer},
+	year = {2023},
+	month = {03},
+	date = {2023-03-10},
+	url = {https://cran.r-project.org/web/packages/gapminder/index.html}
+}
+
+@book{chang2024,
+	title = {shiny: Web Application Framework for R},
+	author = {Chang, Winston and Cheng, Joe and Allaire, J. J. and Sievert, Carson and Schloerke, Barret and Xie, Yihui and Allen, Jeff and McPherson, Jonathan and Dipert, Alan and Borges, Barbara and Software, Posit and PBC,  and {library)}, {jQuery Foundation (jQuery library and jQuery UI} and {inst/www/shared/jquery-AUTHORS.txt)}, {jQuery contributors (jQuery library; authors listed in} and {inst/www/shared/jqueryui/AUTHORS.txt)}, {jQuery UI contributors (jQuery UI library; authors listed in} and {library)}, {Mark Otto (Bootstrap} and {library)}, {Jacob Thornton (Bootstrap} and {library)}, {Bootstrap contributors (Bootstrap} and Twitter,  and {library)}, {Inc (Bootstrap} and {plugin)}, {Prem Nawaz Khan (Bootstrap accessibility} and {plugin)}, {Victor Tsaran (Bootstrap accessibility} and {plugin)}, {Dennis Lembree (Bootstrap accessibility} and {plugin)}, {Srinivasu Chakravarthula (Bootstrap accessibility} and {plugin)}, {Cathy O'Connor (Bootstrap accessibility} and PayPal,  and {plugin)}, {Inc (Bootstrap accessibility} and {library)}, {Stefan Petre (Bootstrap-datepicker} and {library)}, {Andrew Rowls (Bootstrap-datepicker} and {library)}, {Brian Reavis (selectize js} and {library)}, {Salmen Bejaoui (selectize-plugin-a11y} and {library)}, {Denis Ineshin (ion rangeSlider} and {library)}, {Sami Samhuri (Javascript strftime} and {library)}, {SpryMedia Limited (DataTables} and {library)}, {John Fraser (showdown js} and {library)}, {John Gruber (showdown js} and {library)}, {Ivan Sagalaev (highlight js} and {R)}, {R. Core Team (tar implementation from}},
+	year = {2024},
+	month = {08},
+	date = {2024-08-01},
+	url = {https://cran.r-project.org/web/packages/shiny/index.html}
+}
+
+@book{xieaut2024,
+	title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+	author = {{Xie  [aut}, Yihui and cre,  and Sarma, Abhraneel and Vogt, Adam and Andrew, Alastair and Zvoleff, Alex and Al-Zubaidi, Amar and {http://www.andre-simon.de)}, {Andre Simon (the CSS files under inst/themes/ were derived from the Highlight package} and Atkins, Aron and Wolen, Aaron and Manton, Ashley and Yasumoto, Atsushi and Baumer, Ben and Diggs, Brian and Zhang, Brian and Yapparov, Bulat and Pereira, Cassio and Dervieux, Christophe and Hall, David and Hugh-Jones, David and Robinson, David and Hemken, Doug and Murdoch, Duncan and Campitelli, Elio and Hughes, Ellis and Riederer, Emily and Hirschmann, Fabian and Simeon, Fitch and Fang, Forest and {inst/misc/Sweavel.sty)}, {Frank E. Harrell Jr (the Sweavel package at} and Aden-Buie, Garrick and Detrez, Gregoire and Wickham, Hadley and Zhu, Hao and Jeon, Heewon and Bengtsson, Henrik and Yutani, Hiroaki and Lyttle, Ian and Daniel, Hodges and Bien, Jacob and Burkhead, Jake and Manton, James and Lander, Jared and Punyon, Jason and Luraschi, Javier and Arnold, Jeff and Bryan, Jenny and {inst/misc/docco-classic.css)}, {Jeremy Ashkenas (the CSS file at} and Stephens, Jeremy and Hester, Jim and Cheng, Joe and Ranke, Johannes and Honaker, John and Muschelli, John and Keane, Jonathan and Allaire, J. J. and Toloe, Johan and Sidi, Jonathan and Larmarange, Joseph and Barnier, Julien and Zhong, Kaiyin and Slowikowski, Kamil and Forner, Karl and Smith, Kevin K. and Mueller, Kirill and Takahashi, Kohske and Walthert, Lorenz and Gallindo, Lucas and Hofert, Marius and {Modrák}, Martin and Chirico, Michael and Friendly, Michael and Bojanowski, Michal and Kuhlmann, Michel and Patrick, Miller and Caballero, Nacho and Salkowski, Nick and Hansen, Niels Richard and Ross, Noam and Mahdi, Obada and Krivitsky, Pavel N. and Faria, Pedro and Li, Qiang and Vaidyanathan, Ramnath and Cotton, Richard and Krzyzanowski, Robert and Copetti, Rodrigo and Francois, Romain and Williamson, Ruaridh and Mati, Sagiru and Kostyshak, Scott and Meyer, Sebastian and Brouwer, Sietse and Bernard, Simon de and Rousseau, Sylvain and Wei, Taiyun and Assus, Thibaut and Lamadon, Thibaut and Leeper, Thomas and Mastny, Tim and Torsney-Weir, Tom and Davis, Trevor and Veitas, Viktoras and Zhu, Weicheng and Wu, Wush and Foster, Zachary and Kamvar, Zhian N. and Software, Posit and PBC, },
+	year = {2024},
+	month = {11},
+	date = {2024-11-08},
+	url = {https://cran.r-project.org/web/packages/knitr/index.html}
+}
