--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,14 @@
 --- 
 title: "Metodologia científica e Bioestatística"
-author: "Dr. Hércules Freitas"
+author: "Editor: Dr. Hércules Rezende Freitas"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
-# url: your book url like https://bookdown.org/yihui/bookdown
+url: https://drhrf.github.io/MCBS/
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
-  This is a minimal example of using the bookdown package to write a book.
-  The HTML output format for this example is bookdown::gitbook,
-  set in the _output.yml file.
+  Metodologia científica e Bioestatística.
 link-citations: yes
 github-repo: rstudio/bookdown-demo
 ---
