--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
 url: https://drhrf.github.io/MCBS/
-cover-image: "/images/MCBS_cover.png"
+cover-image: "images/MCBS_cover.png"
 description: |
   Metodologia científica e Bioestatística.
 link-citations: yes
