Changed my name.

--- a/_main_files/MCBSbook.tex
+++ b/_main_files/MCBSbook.tex
@@ -104,12 +104,12 @@
 \urlstyle{same}
 \hypersetup{
   pdftitle={Metodologia científica e Bioestatística},
-  pdfauthor={Editor: Dr.~Hércules Rezende Freitas},
+  pdfauthor={Editor: Hércules Rezende Freitas, Ph.D.},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 \title{Metodologia científica e Bioestatística}
-\author{Editor: Dr.~Hércules Rezende Freitas}
+\author{Editor: Hércules Rezende Freitas, Ph.D.}
 \date{2024-11-29}
 
 \begin{document}
